--- a/aboutus.html
+++ b/aboutus.html
@@ -6,6 +6,17 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <img src="./banner1.jpg" alt="">
+    <h1>Welcome to home of Graphics World</h1>
+    <p>We are into</p>
+    <ol>
+        <li>Brand identity Design </li>
+        <li>Book Publication</li>
+        <li>T-Shirt Design</li>
+        <li>Complementary Card</li>
+        <li>Wedding Banner</li>
+        <li>Billboard</li>
+        <li>Palm fullet </li>
+    </ol>
 </body>
 </html>
